--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 				<div class="container-fluid test-video">
 					<div class="row">
 						<div id="video-background">
-							<video  autoplay="autoplay" muted="muted" preload="auto" loop poster="img/bg_footer_plash.jpg">
+							<video  autoplay="autoplay" muted="muted" preload="auto" loop>
 								<source src="img/1.mp4" type='video/mp4'>
 									<source src="img/1.webm" type='video/webm'>
 										<source src="img/1.ogv" type='video/ogg'>
